Fix container overflow, sidebar conflicts, container scrolling, and slider cutoffs

--- a/static/benchmarks/css/leaderboard/components/_range-sliders.sass
+++ b/static/benchmarks/css/leaderboard/components/_range-sliders.sass
@@ -128,9 +128,9 @@
   .slider-container
     position: relative
     height: 40px
-    width: 100%
+    width: calc(100% - 22px)
+    margin: 8px 11px 0 11px
     cursor: pointer
-    margin-top: 8px
 
     .slider-track
       position: absolute
